[package]
name = "ding"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
curl-parser = { path = "./curl-parser" }
http = "1.3.1"
indexmap = "2.9.0"
openapiv3 = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
